--- a/src/main/webapp/WEB-INF/views/new.html
+++ b/src/main/webapp/WEB-INF/views/new.html
@@ -5,16 +5,19 @@
     <title>Add a new user</title>
 </head>
 <body>
-<!--/*@thymesVar id="user" type="java"*/-->
+
 <form th:method="post" th:action="@{/}" th:object="${user}">
     <label for="name">Name</label>
-    <input type="text" th:field="*{name}" id="name">
+    <input type="text" th:field="*{name}" id="name"/>
+    <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error</div>
     <br>
-    <label for="lastname">Lastname</label>
-    <input type="text" th:field="*{lastName}" id="lastname">
+    <label for="lastName">Lastname</label>
+    <input type="text" th:field="*{lastName}" id="lastName"/>
+    <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">Error</div>
     <br>
-    <label for="year_of_birth">Year of birth</label>
-    <input type="number" th:field="*{yearOfBirth}" id="year_of_birth">
+    <label for="yearOfBirth">Year of birth</label>
+    <input type="number" th:field="*{yearOfBirth}" id="yearOfBirth"/>
+    <div style="color:red" th:if="${#fields.hasErrors('yearOfBirth')}" th:errors="*{lastName}">Error</div>
     <br>
     <input type="submit" value="Add user">
 </form>
