--- a/src/main/webapp/WEB-INF/views/new.html
+++ b/src/main/webapp/WEB-INF/views/new.html
@@ -17,7 +17,7 @@
     <br>
     <label for="yearOfBirth">Year of birth</label>
     <input type="number" th:field="*{yearOfBirth}" id="yearOfBirth"/>
-    <div style="color:red" th:if="${#fields.hasErrors('yearOfBirth')}" th:errors="*{lastName}">Error</div>
+    <div style="color:red" th:if="${#fields.hasErrors('yearOfBirth')}" th:errors="*{yearOfBirth}">Error</div>
     <br>
     <input type="submit" value="Add user">
 </form>
